--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,7 @@ header nav ul li a {
     font-weight: lighter;
     font-size: 22px;
 }
+
 body {
       /* I'm a CSS comment! */
   color: #39a6b2;
@@ -68,7 +69,6 @@ body {
 
   section {
       padding: 60px;
-    
   }
 
   /* Hero Style Start */
@@ -79,6 +79,7 @@ body {
       background-position: center;
       position: relative;
   }
+
   /* Hero Style End */
 
   .hero-form {
@@ -121,5 +122,29 @@ body {
       border: none;
       padding: 10px 20px;
       font-size: 16px;
-    
+  }
+
+  .intro {
+      text-align: center;
+  }
+
+  .intro h2 {
+      font-size: 55px;
+      color: #024e76;
+      margin-bottom: 35px;
+      padding: 0 100px 20px 100px;
+      border-bottom: 3px solid;
+      border-color: #fce138;
+  }
+
+  .intro h2 {
+      /* add this alongside your other declarations */
+      display: inline-block;
+  }
+
+  .intro p {
+      line-height: 1.7;
+      color: #39a6b2;
+      width: 80%;
+      font-size: 20px;
   }
