--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,6 +127,20 @@ body {
       text-align: center;
   }
 
+  .intro h2 {
+    font-size: 55px;
+    color: #024e76;
+    margin-bottom: 35px;
+    padding: 0 100px 20px 100px;
+    border-bottom: 3px solid;
+    border-color: #fce138;
+  }
+
+  .intro h2 {
+    /* add this alongside your other declarations */
+    display: inline-block;
+  }
+
   .intro p {
       line-height: 1.7;
       color: #39a6b2;
@@ -134,18 +148,14 @@ body {
       font-size: 20px;
   }
 
+  .intro p {
+      /* ad this alongside your other declarations */
+    margin: 0 auto;
+  }
+
   .steps {
       text-align: center;
       background: #fce138;
-  }
-
-  .section-title {
-      font-size: 55px;
-      color: #024e76;
-      margin-bottom: 35px;
-      padding: 0 100px 20px 100px;
-      display: inline-block;
-      border-bottom: 3px solid;
   }
 
   .steps div {
