--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ header {
     flex-wrap: wrap;
     padding: 20px 35px;
     background-color: #39a6b2;
-    display: flex
+    display: flex;
   }
 
 header h1{
@@ -79,6 +79,9 @@ body {
 
   /* Hero Style Start */
   .hero {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
       background-image: url("../images/hero-bg.jpg");
       background-size: cover;
       background-position: center;
@@ -301,16 +304,10 @@ body {
   }
 
   .contact-info iframe {
-    width: 400px;
     height: 400px;
   }
 
   .contact-info div {
-    width: 410px;
-    display: inline-block;
-    vertical-align: top;
-    text-align: left;
-    margin: 30px 0 0 60px;
     color: white;
   }
 
@@ -323,12 +320,44 @@ body {
   .contact-info address {
     margin: 20px 0;
     line-height: 1.5;
-    font-size: 20px;
+    font-size: 16px;
     font-style: normal;
   }
   
   .contact-info a {
     color: #fce138;
+  }
+
+  .contact-info {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+
+  .contact-info > * {
+    flex: 1;
+    margin: 15px;
+  }
+
+  .contact-form input, .contact-form textarea {
+    border: 1px solid #024e76;
+    display: block;
+    padding: 7px 15px;
+    font-size: 16px;
+    color: #024e76;
+    width: 100%;
+    margin-bottom: 15px;
+    margin-top: 5px;
+  }
+
+  .contact-form button {
+    width: 100%;
+    border: none;
+    background: #fce138;
+    color: #024e76;
+    text-align: center;
+    padding: 15px 0;
+    font-size: 16px;
   }
 
   /* REACH OUT STYLES END */
