--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,32 +1,32 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  /* apply styles to <header> */
-header {
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding: 20px 35px;
-    background-color: #39a6b2;
-    display: flex;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-header h1{
-    font-weight: bold;
-    font-size: 36px;
-    color: #fce138;
-    margin: 0;
+/* apply styles to <header> */
+header {
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 20px 35px;
+  background-color: #39a6b2;
+  display: flex;
+}
+
+header h1 {
+  font-weight: bold;
+  font-size: 36px;
+  color: #fce138;
+  margin: 0;
 }
 
 header a {
-    text-decoration: none;
-    color: #fce138;
+  text-decoration: none;
+  color: #fce138;
 }
 
 header nav {
-    margin: 7px 0;
+  margin: 7px 0;
 }
 
 header nav ul {
@@ -38,330 +38,328 @@ header nav ul {
 }
 
 header nav ul li a {
-    margin: 0 30px;
-    font-weight: lighter;
-    font-size: 1.55vw;
+  margin: 0 30px;
+  font-weight: lighter;
+  font-size: 1.55vw;
 }
 
 body {
-      /* I'm a CSS comment! */
-    color: #39a6b2;
-    font-family: Helvetica, Arial, sans-serif;
-  }
+  /* I'm a CSS comment! */
+  color: #39a6b2;
+  font-family: Helvetica, Arial, sans-serif;
+}
 
-  footer {
-      justify-content: space-between;
-      flex-wrap: wrap;
-      display: flex;
-      background: #fce138;
-      width: 100%;
-      padding: 40px 35px;
-  }
+footer {
+  justify-content: space-between;
+  flex-wrap: wrap;
+  display: flex;
+  background: #fce138;
+  width: 100%;
+  padding: 40px 35px;
+}
 
-  footer h2 {
-      color: #024e76;
-      font-size: 30px;
-      margin: 0;
-  }
+footer h2 {
+  color: #024e76;
+  font-size: 30px;
+  margin: 0;
+}
 
-  footer div {
-      line-height: 1.5;
-      text-align: right;
-  }
+footer div {
+  line-height: 1.5;
+  text-align: right;
+}
 
-  footer a {
-      color: #024e76;
-  }
+footer a {
+  color: #024e76;
+}
 
-  section {
-      padding: 60px;
-  }
+section {
+  padding: 60px;
+}
 
-  /* Hero Style Start */
-  .hero {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-      background-image: url("../images/hero-bg.jpg");
-      background-size: cover;
-      background-position: center;
-  }
-  /* Hero Style End */
+/* Hero Style Start */
+.hero {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  background-image: url("../images/hero-bg.jpg");
+  background-size: cover;
+  background-position: center;
+}
+/* Hero Style End */
 
-  .hero-cta {
-    width: 35%;
-    text-align: right;
-    margin: 3.5%;
-    color: #fff;
-    font-size: 18px;
-    line-height: 1.3;
-  }
+.hero-cta {
+  width: 35%;
+  text-align: right;
+  margin: 3.5%;
+  color: #fff;
+  font-size: 18px;
+  line-height: 1.3;
+}
 
-  .hero-cta h2 {
-    font-style: italic;
-    font-size: 55px;
-    color: #fce138;
-  }
+.hero-cta h2 {
+  font-style: italic;
+  font-size: 55px;
+  color: #fce138;
+}
 
-  .hero-form {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      border: 3px solid #024e76;
-      background-color: #fce138;
-      padding: 20px;
-      color: #024e76;
-      width: 40%;
-      margin: 3.5%;
-  }
+.hero-form {
+  border: 3px solid #024e76;
+  background-color: #fce138;
+  padding: 20px;
+  color: #024e76;
+  width: 40%;
+  margin: 3.5%;
+}
 
-  .hero-form h3 {
-      font-size:  24px;
-      margin: 0;
-  }
+.hero-form h3 {
+  font-size: 24px;
+  margin: 0;
+}
 
-  .hero-form p {
-      margin: 5px 0 15px 0;
-  }
+.hero-form p {
+  margin: 5px 0 15px 0;
+}
 
-  .form-input {
-      border: 1px solid #024e76;
-      display: block;
-      padding: 7px 15px;
-      font-size: 16px;
-      color: #024e76;
-      width: 100%;
-      margin-bottom: 15px;
-  }
+.form-input {
+  border: 1px solid #024e76;
+  display: block;
+  padding: 7px 15px;
+  font-size: 16px;
+  color: #024e76;
+  width: 100%;
+  margin-bottom: 15px;
+}
 
-  .hero-form label {
-      margin: 0 5px;
-  }
+.hero-form label {
+  margin: 0 5px;
+}
 
-  .hero-form button {
-      color: #fce138;
-      background-color: #024e76;
-      border: none;
-      padding: 10px 20px;
-      font-size: 16px;
-  }
+.hero-form button {
+  color: #fce138;
+  background-color: #024e76;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+}
 
-  .intro h2 {
-    font-size: 55px;
-    color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    border-bottom: 3px solid;
-    border-color: #fce138;
-  }
+.intro h2 {
+  font-size: 55px;
+  color: #024e76;
+  margin-bottom: 35px;
+  padding: 0 100px 20px 100px;
+  border-bottom: 3px solid;
+  border-color: #fce138;
+}
 
-  .intro h2 {
-    /* add this alongside your other declarations */
-    display: inline-block;
-  }
+.intro h2 {
+  /* add this alongside your other declarations */
+  display: inline-block;
+}
 
-  .intro p {
-    text-align: center;
-      line-height: 1.7;
-      color: #39a6b2;
-      width: 80%;
-      font-size: 20px;
-      margin: 0 auto;
-  }
-  
-  .section-title {
-    padding-bottom: 20px;
-    text-align: center;
-    margin: 0 auto 35px auto;
-    width: 50%;
-    font-size: 55px;
-    color: #024e76;
-    border-bottom: 3px solid;
-  }
-  
-  .primary-border {
-    border-color: #fce138;
-  }
-  
-  .secondary-border {
-    border-color: #39a6b2;
-  }
+.intro p {
+  text-align: center;
+  line-height: 1.7;
+  color: #39a6b2;
+  width: 80%;
+  font-size: 20px;
+  margin: 0 auto;
+}
 
-  .step {
-    margin: 50px auto;
-    padding-bottom: 50px;
-    width: 80%;
-    border-bottom: 1px solid #39a6b2;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-  }
+.section-title {
+  padding-bottom: 20px;
+  text-align: center;
+  margin: 0 auto 35px auto;
+  width: 50%;
+  font-size: 55px;
+  color: #024e76;
+  border-bottom: 3px solid;
+}
 
-  .step-info {
-    flex: 2 70%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-  }
+.primary-border {
+  border-color: #fce138;
+}
 
-  .steps {
-      background: #fce138;
-  }
+.secondary-border {
+  border-color: #39a6b2;
+}
 
-  .steps h2 {
-    font-size: 55px;
-    color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    border-bottom: 3px solid;
-    border-color: #39a6b2;
-  }
+.step {
+  margin: 50px auto;
+  padding-bottom: 50px;
+  width: 80%;
+  border-bottom: 1px solid #39a6b2;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
 
-  .step h3 {
-    flex: 1 30%;
-    color: #024e76;
-    font-size: 46px;
-  }
+.step-info {
+  flex: 2 70%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
 
-  .step-text p {
-      color: #39a6b2;
-      font-size: 18px;
-  }
+.steps {
+  background: #fce138;
+}
 
-  .step-text h4 {
-    font-size:  26px;
-    line-height: 1.5;
-    color: #024e76;
-  }
+.steps h2 {
+  font-size: 55px;
+  color: #024e76;
+  margin-bottom: 35px;
+  padding: 0 100px 20px 100px;
+  border-bottom: 3px solid;
+  border-color: #39a6b2;
+}
 
-  .step-img {
-    flex: 1 12%;
-    margin-right: 20px;
-  }
+.step h3 {
+  flex: 1 30%;
+  color: #024e76;
+  font-size: 46px;
+}
 
-  .step-img img {
-    max-width: 100%;
-  }
+.step-text p {
+  color: #39a6b2;
+  font-size: 18px;
+}
 
-  .step-text {
-    flex: 12;
-  }
+.step-text h4 {
+  font-size: 26px;
+  line-height: 1.5;
+  color: #024e76;
+}
 
-  .trainers {
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
+.step-img {
+  flex: 1 12%;
+  margin-right: 20px;
+}
 
-  .trainer {
-      flex: 1;
-      margin: 20px;
-      background: #024e76;
-      color: #fce138;
-  }
+.step-img img {
+  max-width: 100%;
+}
 
-  .trainer img {
-      width: 100%;
-  }
+.step-text {
+  flex: 12;
+}
 
-  .trainer-bio {
-      padding: 25px;
-      line-height: 1.3;
-  }
+.trainers {
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
 
-  .text-left {
-      text-align: left;
-  }
+.trainer {
+  flex: 1;
+  margin: 20px;
+  background: #024e76;
+  color: #fce138;
+}
 
-  .text-right {
-      text-align: right;
-  }
+.trainer img {
+  width: 100%;
+}
 
-  .trainer-bio h3 {
-      font-size: 28px;
-  }
+.trainer-bio {
+  padding: 25px;
+  line-height: 1.3;
+}
 
-  .trainer-bio h4 {
-      font-weight: lighter;
-      font-size: 22px;
-      margin-bottom: 15px;
-  }
+.text-left {
+  text-align: left;
+}
 
-  .trainer-bio p {
-      font-size: 17px;
-  }
+.text-right {
+  text-align: right;
+}
 
-  /* REACH OUT STYLES START */
+.trainer-bio h3 {
+  font-size: 28px;
+}
+
+.trainer-bio h4 {
+  font-weight: lighter;
+  font-size: 22px;
+  margin-bottom: 15px;
+}
+
+.trainer-bio p {
+  font-size: 17px;
+}
+
+/* REACH OUT STYLES START */
 .contact {
-    background: #024e76;
-  }
+  background: #024e76;
+}
 
-  .contact h2 {
-      color: #fce138;
-  }
+.contact h2 {
+  color: #fce138;
+}
 
-  .contact-info iframe {
-    height: 400px;
-  }
+.contact-info iframe {
+  height: 400px;
+}
 
-  .contact-info div {
-    color: white;
-  }
+.contact-info div {
+  color: white;
+}
 
-  .contact-info h3 {
-    color: #fce138;
-    font-size: 32px;
-  }
-  
-  .contact-info p,
-  .contact-info address {
-    margin: 20px 0;
-    line-height: 1.5;
-    font-size: 16px;
-    font-style: normal;
-  }
-  
-  .contact-info a {
-    color: #fce138;
-  }
+.contact-info h3 {
+  color: #fce138;
+  font-size: 32px;
+}
 
-  .contact-info {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-  }
+.contact-info p,
+.contact-info address {
+  margin: 20px 0;
+  line-height: 1.5;
+  font-size: 16px;
+  font-style: normal;
+}
 
-  .contact-info > * {
-    flex: 1;
-    margin: 15px;
-  }
+.contact-info a {
+  color: #fce138;
+}
 
-  .contact-form input, .contact-form textarea {
-    border: 1px solid #024e76;
-    display: block;
-    padding: 7px 15px;
-    font-size: 16px;
-    color: #024e76;
-    width: 100%;
-    margin-bottom: 15px;
-    margin-top: 5px;
-  }
+.contact-info {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
 
-  .contact-form button {
-    width: 100%;
-    border: none;
-    background: #fce138;
-    color: #024e76;
-    text-align: center;
-    padding: 15px 0;
-    font-size: 16px;
-  }
+.contact-info > * {
+  flex: 1;
+  margin: 15px;
+}
 
-  /* REACH OUT STYLES END */
-  
-  .flex-row {
-    display: flex;
-  }
+.contact-form input,
+.contact-form textarea {
+  border: 1px solid #024e76;
+  display: block;
+  padding: 7px 15px;
+  font-size: 16px;
+  color: #024e76;
+  width: 100%;
+  margin-bottom: 15px;
+  margin-top: 5px;
+}
+
+.contact-form button {
+  width: 100%;
+  border: none;
+  background: #fce138;
+  color: #024e76;
+  text-align: center;
+  padding: 15px 0;
+  font-size: 16px;
+}
+
+/* REACH OUT STYLES END */
+
+.flex-row {
+  display: flex;
+}
